# Autocert-PanOS

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pan_certbot_domeneshop  pyproject.toml  requirements.txt
.secrets/certbot/: .domeneshop.env.example  .domeneshop.ini.example
.secrets/pan-python/: .panos.env.example
.secrets/panos/: .panos.env.example
app/: log_handlerr.py
build_files/: cron
crud/: cert_tools.py
src/autocert_panos/: autocert_cli.py  log_handler.py  run.py
src/autocert_panos/crud/: cert_tools.py  certbot_wrapper.py  common.py  panos_tools.py
src/autocert_panos/models/: config.py  palo_xml_api.py
src/gui_tests/: cli.py  columns.py  layout.py  markdown.py  print_log.py  progress.py  syntax_highlight.py  table.py  top_lite.py  tree.py
