[project]
name = "letsencrypt-domeneshop-paloalto"
version = "0.1.0"
description = "LetsEncrypt certificates for your Palo Alto Networks Firewalls! Can be adapted to work with most vendor makes/models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pan-python",
    "certbot",
    "certbot-dns-domeneshop",
    "pyopenssl>=25.3.0",
    "ipython>=9.6.0",
    "cryptography>=46.0.3",
]
